fix: image width on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -34,6 +34,14 @@ a {
   color: var(--c-light-c);
 }
 
+figure {
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+}
+
 html {
   color: var(--c-light);
   font-family: "Scope One", serif;
@@ -56,6 +64,8 @@ body {
   max-width: 100%;
   text-align: center;
   font-weight: 900;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   color: var(--c-polgar);
   text-shadow: 4px 4px 0px var(--c-contrast);
 }
